--- a/public/static/admin/config.yml
+++ b/public/static/admin/config.yml
@@ -11,7 +11,35 @@ collections:
         file: "content/home.md"
         fields:
           - { label: "Title", name: "title", widget: "string" }
-          - { label: "Publish Date", name: "date", widget: "datetime" }
+          - { label: "Sub-title", name: "subTitle", widget: "string" }
+          - {
+              label: "Background Title",
+              name: "urlBackground",
+              widget: "image",
+            }
+      - label: "Sobre"
+        name: "sobre"
+        file: "content/sobre.md"
+        fields:
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Sub-title", name: "subTitle", widget: "string" }
+          - {
+              label: "Background Title",
+              name: "urlBackground",
+              widget: "image",
+            }
+          - { label: "Body", name: "body", widget: "markdown" }
+      - label: "Contato"
+        name: "contato"
+        file: "content/contato.md"
+        fields:
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Sub-title", name: "subTitle", widget: "string" }
+          - {
+              label: "Background Title",
+              name: "urlBackground",
+              widget: "image",
+            }
           - { label: "Body", name: "body", widget: "markdown" }
   - name: "blog"
     label: "Blog"
