--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "npm run build && next export"
   },
   "dependencies": {
+    "date-fns": "^2.6.0",
     "jdown": "^1.0.3",
     "next": "^9.1.1",
     "polished": "^3.4.1",
