--- a/public/static/admin/config.yml
+++ b/public/static/admin/config.yml
@@ -49,6 +49,7 @@ collections:
     folder: "content/blog"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    preview_path: blog/{{slug}}
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
@@ -61,4 +62,5 @@ collections:
           widget: "list",
           field: { label: Tag, name: tag, widget: text },
         }
+      - { label: "Slug", name: "slug", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
